fixed bugs in hangman, added server functionalities and configured it with redis @mzielinski-neducatio @mmiszuta-neducatio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     tty: true
     stdin_open: true
 
-  db:
+  redis:
     container_name: hangmanDB
     image: redis:latest
     command: redis-server --appendonly yes
